# scribe-py

./: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements-flexible.txt  requirements-v3_12.txt  requirements.txt
alembic/: env.py
alembic/versions/: fc7c5de6bf6f_initial_migration.py
config/: settings.py
controllers/: __init__.py  auth_controller.py  transcription_controller.py
errors/: __init__.py  custom_exceptions.py
middleware/: __init__.py  auth_middleware.py
models/: __init__.py  transcript.py  user.py
routes/: __init__.py  auth.py  transcription.py
services/: __init__.py  auth_service.py  transcription_service.py
utils/: __init__.py  file_utils.py  jwt_utils.py  password_utils.py
